--- a/WebApp/vue/src/styles/index.scss
+++ b/WebApp/vue/src/styles/index.scss
@@ -124,6 +124,14 @@ aside {
   padding: 20px;
 }
 
+.head-container {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  // align-items: center;
+  gap: 0.5rem;
+}
+
 .components-container {
   margin: 30px 50px;
   position: relative;
